--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Jack Thompson</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css" />
     </head>
     <body>
         <h1>hi</h1>
@@ -11,5 +12,6 @@
         <ul>
             <li><a href="https://www.linkedin.com/in/jakkuthompson/">linkedin</a></li>
         </ul>
+        <img class="cate" src="img/he.jpg" />
     </body>
 </html>
